@@ -1,5 +1,10 @@
 2009-01-13  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Data/KeyholeMarkupLanguage.cs:
+	* Data/WellKnownText/SimpleFeatureAccess.cs: more localization fixes
+
+2009-01-13  Scott Ellington  <scott.ellington@gmail.com>
+
 	* Data/WellKnownText/SimpleFeatureAccess.cs: use invariant culture to
 	avoid locale problems
 
